--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,18 +4,18 @@
 			<div class="row">
 				<div class="col-sm-5 form-group">
 					<label for="name">Name</label>
-					<input type="text" class="form-control" id="name">
+					<input type="text" class="form-control" id="name" #nameInput>
 				</div>
 				<div class="form-group col-sm-2">
 					<label for="amount">Amount</label>
-					<input type="number" id="amount" class="form-control">
+					<input type="number" id="amount" class="form-control" #amountInput>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12">
-					<button type="submit" class="btn btn-default">Add</button>
-					<button type="button" class="btn btn-danger">Delete</button>
-					<button type="button" class="btn btn-primary">Clear</button>
+					<button type="submit" class="btn btn-success" (click)="add()">Add</button>
+					<button type="button" class="btn btn-danger" (click)="delete()">Delete</button>
+					<button type="button" class="btn btn-primary" (click)="clear()">Clear</button>
 				</div>
 			</div>
 		</form>
