--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,7 +16,7 @@
 				Manage recipe <span class="caret"></span>
 			</button>
 			<ul class="dropdown-menu">
-				<li><a href="#">Add ingredients to list</a></li>
+				<li><a style="cursor: pointer" (click)="addIngredientsToList()">Add ingredients to shopping list</a></li>
 				<li><a href="#">Edit Recipe</a></li>
 				<li><a href="#">Delete Recipe</a></li>
 			</ul>
@@ -30,6 +30,10 @@
 </div>
 <div class="row">
 	<div class="col-xs-12">
-		Ingredients
+		<ul class="list-group">
+			<li class="list-group-item" *ngFor="let ing of selectedRecipe.ingredients">
+				{{ing.name}} - {{ing.amount}}
+			</li>
+		</ul>
 	</div>
 </div>
