--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,21 +1,21 @@
 <div class="row">
 	<div class="col-xs-12">
-		<form>
+		<form (ngSubmit)="onSubmit(f)" #f="ngForm">
 			<div class="row">
 				<div class="col-sm-5 form-group">
 					<label for="name">Name</label>
-					<input type="text" class="form-control" id="name" #nameInput>
+					<input type="text" class="form-control" id="name" ngModel name="name" required>
 				</div>
 				<div class="form-group col-sm-2">
 					<label for="amount">Amount</label>
-					<input type="number" id="amount" class="form-control" #amountInput>
+					<input type="number" id="amount" class="form-control" ngModel name="amount" required pattern="^[1-9]+[0-9]*$">
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12">
-					<button type="submit" class="btn btn-success" (click)="add()">Add</button>
-					<button type="button" class="btn btn-danger" (click)="delete()">Delete</button>
-					<button type="button" class="btn btn-primary" (click)="clear()">Clear</button>
+					<button type="submit" class="btn btn-success" [disabled]="f.invalid">{{editMode ? 'Update' : 'Add'}}</button>
+					<button *ngIf="editMode" type="button" class="btn btn-danger" (click)="onDelete()">Delete</button>
+					<button type="button" class="btn btn-primary" (click)="onClear()">Clear</button>
 				</div>
 			</div>
 		</form>
