--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,7 +18,7 @@
 			<ul class="dropdown-menu">
 				<li><a style="cursor: pointer" (click)="addIngredientsToList()">Add ingredients to shopping list</a></li>
 				<li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
-				<li><a style="cursor: pointer;">Delete Recipe</a></li>
+				<li><a style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a></li>
 			</ul>
 		</div>
 	</div>
