--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,15 +5,21 @@
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li routerLinkActive="active"><a routerLink="/recipes" >Recipes</a></li>
+				<li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
 				<li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li class="dropdown" appDropdown>
+				<ng-template [ngIf]="!authService.isAuthenticated()">
+					<li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
+					<li routerLinkActive="active"><a routerLink="/signin">Login</a></li>
+				</ng-template>
+
+				<li><a style="cursor: pointer;" (click)="onLogout()" *ngIf="authService.isAuthenticated()">Logout</a></li>
+				<li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
 					<a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a style="cursor: pointer;">Saving Data</a></li>
-						<li><a style="cursor: pointer;">Fetching Data</a></li>
+						<li><a style="cursor: pointer;" (click)="onSave()">Saving Data</a></li>
+						<li><a style="cursor: pointer;" (click)="onGet()">Fetching Data</a></li>
 					</ul>
 				</li>
 			</ul>
